--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask~=2.2.3
-pandas~=1.5.2
-numpy~=1.23.5
-tensorflow~=2.12.0
-pyspark~=3.3.2
+Flask==2.2.0
+pandas==1.5.0
+numpy==1.23.0
+tensorflow==2.11.0
+pyspark==3.3.0
