--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-Flask==2.2.0
-pandas==1.5.0
-numpy==1.23.0
-tensorflow-gpu==1.15
-pyspark==2.4.8
+jsonpickle~=3.0.1
+Flask~=2.2.3
+pandas~=1.5.2
+joblib~=1.2.0
+pyspark~=3.3.2
+matplotlib~=3.6.3
+numpy~=1.23.5
+scikit-learn~=1.2.1
+tensorflow~=2.12.0
